--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
